getElementsByTagName() should take a qualifiedName in parameter https://bugs.webkit.org/show_bug.cgi?id=160682

Reviewed by Ryosuke Niwa.

LayoutTests/imported/w3c:

* web-platform-tests/dom/nodes/Document-getElementsByTagName-expected.txt:
* web-platform-tests/dom/nodes/Document-getElementsByTagName-xhtml-expected.txt:
* web-platform-tests/dom/nodes/Element-getElementsByTagName-expected.txt:
* web-platform-tests/dom/nodes/case-expected.txt:
Rebaseline several W3C tests now that more checks are passing.

* web-platform-tests/dom/nodes/Document-getElementsByTagName-xhtml.xhtml:
Re-sync this test from upstream as it was outdated after:
- https://github.com/w3c/web-platform-tests/pull/3457

Source/WebCore:

getElementsByTagName() should take a qualifiedName in parameter, not a
localName, according to the latest DOM specification:
- https://dom.spec.whatwg.org/#dom-document-getelementsbytagname
- https://dom.spec.whatwg.org/#concept-getelementsbytagname

The new behavior matches Firefox and Edge. There is a slight
compatiblity risk but we should give it a try.

No new tests, rebaselined existing tests.

* WebCore.xcodeproj/project.pbxproj:
* dom/AllDescendantsCollection.h: Added.
* dom/ContainerNode.cpp:
(WebCore::ContainerNode::getElementsByTagName):
(WebCore::ContainerNode::getElementsByTagNameNS):
* dom/Node.cpp:
(WebCore::NodeListsNodeData::invalidateCaches):
* dom/NodeRareData.h:
(WebCore::NodeListsNodeData::addCachedTagCollectionNS):
(WebCore::NodeListsNodeData::removeCachedTagCollectionNS):
(WebCore::NodeListsNodeData::adoptDocument):
(WebCore::NodeListsNodeData::deleteThisAndUpdateNodeRareDataIfAboutToRemoveLastList):
* dom/TagCollection.cpp:
(WebCore::makeQualifiedName):
(WebCore::splitQualifiedName):
(WebCore::TagCollectionNS::TagCollectionNS):
(WebCore::TagCollectionNS::~TagCollectionNS):
(WebCore::TagCollection::TagCollection):
(WebCore::TagCollection::~TagCollection):
(WebCore::HTMLTagCollection::HTMLTagCollection):
(WebCore::HTMLTagCollection::~HTMLTagCollection):
* dom/TagCollection.h:
(WebCore::TagCollection::elementMatches):
(WebCore::TagCollectionNS::elementMatches):
(WebCore::HTMLTagCollection::elementMatches):
* html/CollectionType.h:
* html/GenericCachedHTMLCollection.cpp:
(WebCore::GenericCachedHTMLCollection<traversalType>::elementMatches):
* html/HTMLCollection.cpp:
(WebCore::invalidationTypeExcludingIdAndNameAttributes):

LayoutTests:

Update existing tests to reflect behavior change.

* fast/dom/getElementsByClassName/010.xml:
* fast/dom/getElementsByClassName/011.xml:


Canonical link: https://commits.webkit.org/178942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204441 268f45cc-cd09-0410-ab3c-d52691b4dbfc